...
                    android:ems="10"
                    android:inputType="none"
                    android:text="Home Buying Fund"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/HomeBuyingFundDecimalID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

...
                    android:inputType="none"
                    android:text="Personal Choice Holidays"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/PersonalChoiceHolidaysNumberID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>
...
                    android:inputType="none"
                    android:text="Monthly Internet Stipend"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/MonthlyInternetStipendNumberID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />

...
